--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@
 .idea/misc.xml
 .idea/modules.xml
 .idea/vcs.xml
-Java-JDO_Schemas.iml
+/Java-JDO_Schemas.iml
+/Java-JDO_Schemas.ipr
+/Java-JDO_Schemas.iws
